# rocafort-m01-rocalog

./: README.md  pyproject.toml
docs/: diseno-aplicacion-auditorias.md
rocalog/: __init__.py  audit_app.py  audit_storage.py  cli.py  parser.py  pdf_report.py  scoring.py
tests/: test_audit_app_smoke.py  test_cli_smoke.py  test_parser.py  test_scoring.py
tools/: lint.py
