[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RocaLog"
version = "0.2.0"
description = "Auth.log parser and enterprise audit web application"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RocaLog" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pyotp>=2.9",
  "reportlab>=4.1"
]

[tool.setuptools.packages.find]
include = ["rocalog*"]
